--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
         <input v-on:keyup="onKeyup" type="text" v-model='query' placeholder="검색어를 입력하세요" autofocus>
         <button v-on:click="onReset" v-show='query.length' type="reset" class="btn-reset"></button>
       </form>
+      <div v-if="submitted">
+        <div v-if="searchResult.length">
+          <ul>
+            <li v-for="item in searchResult">
+              <img v-bind:src="item.img">{{item.name}}
+            </li>
+          </ul>
+        </div>
+        <div v-else>
+          {{query}} 검색어로 찾을 수 없습니다
+        </div>
+      </div>
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
