--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
           {{query}} 검색어로 찾을 수 없습니다
         </div>
       </div>
+      <div v-else>
+        <ul class='tabs'>
+          <li v-for='tab in tabs' v-bind:class='{active: tab === selectedTab}' v-on:click='onClickTab(tab)'>
+            {{tab}}
+          </li>
+        </ul>
+
+        <div v-if="selectedTab === tabs[0]">
+          추천 검색어 목록
+        </div>
+        <div v-else>
+          최근 검색어 목록
+        </div>
+      </div>
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
