최근검색어 끝!
삭제,최근추가,

--- a/index.html
+++ b/index.html
@@ -52,7 +52,20 @@
           </div>
         </div>
         <div v-else>
-          최근 검색어 목록
+          <div v-if="history.length">
+            <ul class='list'>
+              <li v-for="(item,index) in history">
+                <div v-on:click="onClickKeyword(item.keyword)">
+                {{item.keyword}}
+                <span class="date">{{item.date}}</span>
+                </div>
+                <button class='btn-remove' v-on:click.stop="onClickRemoveHistory(item.keyword)"></button>
+              </li>
+            </ul>
+          </div>
+          <div v-else>
+            최근 검색어가 없습니다
+          </div>
         </div>
       </div>
     </div>
