--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
     <header>
       <h2 class="container">검색</h2>
     </header>
-
     <div class="container">
-      <form v-on:submit.prevent='onSubmit'>
-        <input v-on:keyup="onKeyup" type="text" v-model='query' placeholder="검색어를 입력하세요" autofocus>
-        <button v-on:click="onReset" v-show='query.length' type="reset" class="btn-reset"></button>
-      </form>
+      <search-form v-bind:value="query" v-on:@submit="onSubmit"
+                   v-on:@reset="onRest">
+
+      </search-form>
       <div v-if="submitted">
         <div v-if="searchResult.length">
           <ul>
@@ -36,7 +35,6 @@
             {{tab}}
           </li>
         </ul>
-
         <div v-if="selectedTab === tabs[0]">
           <div v-if="keywords.length">
             <ul class='list'>
@@ -74,3 +72,9 @@
   <script type="module" src="./js/app.js"></script>
 </body>
 </html>
+<template id="search-form">
+  <form v-on:submit.prevent='onSubmit'>
+    <input v-on:keyup="onKeyup" type="text" v-model='inputValue' placeholder="검색어를 입력하세요" autofocus>
+    <button v-on:click="onReset" v-show='inputValue.length' type="reset" class="btn-reset"></button>
+  </form>
+</template>
