--- a/index.html
+++ b/index.html
@@ -14,20 +14,9 @@
     </header>
     <div class="container">
       <search-form v-bind:value="query" v-on:@submit="onSubmit"
-                   v-on:@reset="onRest">
-
-      </search-form>
+                   v-on:@reset="onReset"></search-form>
       <div v-if="submitted">
-        <div v-if="searchResult.length">
-          <ul>
-            <li v-for="item in searchResult">
-              <img v-bind:src="item.img">{{item.name}}
-            </li>
-          </ul>
-        </div>
-        <div v-else>
-          {{query}} 검색어로 찾을 수 없습니다
-        </div>
+        <search-result v-bind:data="searchResult" v-bind:query="query"></search-result>
       </div>
       <div v-else>
         <ul class='tabs'>
@@ -77,4 +66,17 @@
     <input v-on:keyup="onKeyup" type="text" v-model='inputValue' placeholder="검색어를 입력하세요" autofocus>
     <button v-on:click="onReset" v-show='inputValue.length' type="reset" class="btn-reset"></button>
   </form>
+</template>
+
+<template id="search-result">
+  <div v-if="data.length">
+    <ul>
+      <li v-for="item in data">
+        <img v-bind:src="item.img">{{item.name}}
+      </li>
+    </ul>
+  </div>
+  <div v-else>
+    {{query}} 검색어로 찾을 수 없습니다
+  </div>
 </template>
